--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>My Site Title</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+  <h1>This is my website!</h1>
+  <p>Welcome to my website.</p>
+</body>
+</html>
